application/brennoflavio/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: forgejo
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: forgejo
  annotations:
    metallb.io/loadBalancerIPs: 192.168.20.13
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  selector:
    app: forgejo
  ports:
    - protocol: TCP
      port: 2222
      targetPort: 2222
      name: ssh
