application/brennoflavio/forgejo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    external-dns.alpha.kubernetes.io/target: "brennoflavio.com.br"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: external-nginx
  rules:
  - host: git.brennoflavio.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo
            port:
              number: 3000
  tls:
  - hosts:
    - git.brennoflavio.com.br
    secretName: forgejo-tls
